--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -17,8 +17,8 @@
   <body>
     <a href="/">Inicio</a>
     <a href="/about/">Sobre mi</a>
-	<a href="/blog/">Blog</a>
+    <a href="/blog/">Blog</a>
     <h1>IDLES</h1>
-    <h1>Tienda de Idles</h1>
+    <h1>Poleras</h1>
   </body>
 </html>
