--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+const pageTitle = "IDLES";
 ---
 
 <html lang="en">
@@ -12,13 +12,13 @@
     />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>IDLEs</title>
+    <title>{pageTitle}</title>
   </head>
   <body>
     <a href="/">Inicio</a>
     <a href="/about/">Sobre mi</a>
 	<a href="/blog/">Blog</a>
-    <h1>IDLES</h1>
+    <h1>{pageTitle}</h1>
     <h1>Tienda de Idles</h1>
   </body>
 </html>
