--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,17 +1,22 @@
 ---
+import '../styles/global.css';
 const pageTitle = "Sobre mi";
 
 const identity = {
-  firstName: "Sarah",
-  country: "Canada",
-  occupation: "Escritora",
-  hobbies: ["leer", "escribir", "pintar"],
+  firstName: "Ignacio",
+  country: "Chile",
+  occupation: "estudiante de programación",
+  hobbies: ["games", "dibujar", "musica"],
 };
-const skills = ["HTML", "CSS", "JavaScript", "React", "Astro"];
+const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "C#"];
 
-const happy = true;
+const happy = false;
 const finished = false;
 const goal = 3;
+
+const skillColor = "black";
+const fontWeight = "Sans-serif ";
+const textCase = "uppercase";
 ---
 
 <html lang="en">
@@ -25,6 +30,17 @@ const goal = 3;
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>{pageTitle}</title>
+    <style define:vars={{skillColor, fontWeight, textCase}}>
+      h1 {
+        color: purple;
+        font-size: 4rem;
+      }
+      .skill {
+        color: var(--skillColor);
+        font-weight: var(--fontWeight);
+        text-transform: var(--textCase);
+      }
+    </style>
   </head>
   <body>
     <a href="/">Inicio</a>
@@ -32,16 +48,14 @@ const goal = 3;
     <a href="/blog/">Blog</a>
 
     <h1>{pageTitle}</h1>
-    <h2>... ¡y mi nuevo sitio Astro!</h2>
+    <h2>Un weon patetico </h2>
 
     <p>
-      Estoy trabajando en el tutorial introductorio de Astro. Esta es la segunda
-      página de mi sitio web, ¡y es la primera que he construido yo mismo!
+      Estoy trabajando en como salir de la miseria que vivo
     </p>
 
     <p>
-      Este sitio se irá actualizando a medida que vaya completando más partes
-      del tutorial, ¡así que no dejes de visitarlo para ver cómo va mi viaje!
+      Este sitio se irá actualizando a medida que se me quiten las ganas de vivir, si no se actualiza mas es porque me mate
     </p>
 
     {happy && <p>¡Estoy feliz de aprender Astro!</p>}
@@ -71,7 +85,7 @@ const goal = 3;
     </ul>
     <p>Mis habilidades son:</p>
     <ul>
-      {skills.map((skill) => <li>{skill}</li>)}
+      {skills.map((skill) => <li class="skill">{skill}</li>)}
     </ul>
   </body>
 </html>
