--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-import '../styles/global.css';
+import BaseLayout from '../layouts/BaseLayout.astro';
 const pageTitle = "Sobre mi";
 
 const identity = {
@@ -14,40 +14,12 @@ const happy = false;
 const finished = false;
 const goal = 3;
 
-const skillColor = "black";
-const fontWeight = "Sans-serif ";
-const textCase = "uppercase";
+
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="https://www.idlesband.com/wp-content/uploads/sites/3/2023/10/cropped-idles-favicon-2023-32x32.png"
-    />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{pageTitle}</title>
-    <style define:vars={{skillColor, fontWeight, textCase}}>
-      h1 {
-        color: purple;
-        font-size: 4rem;
-      }
-      .skill {
-        color: var(--skillColor);
-        font-weight: var(--fontWeight);
-        text-transform: var(--textCase);
-      }
-    </style>
-  </head>
-  <body>
-    <a href="/">Inicio</a>
-    <a href="/about/">Sobre mi</a>
-    <a href="/blog/">Blog</a>
 
-    <h1>{pageTitle}</h1>
+<BaseLayout pageTitle={pageTitle}>
+    
     <h2>Un weon patetico </h2>
 
     <p>
@@ -87,5 +59,5 @@ const textCase = "uppercase";
     <ul>
       {skills.map((skill) => <li class="skill">{skill}</li>)}
     </ul>
-  </body>
-</html>
+
+</BaseLayout>
