--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,25 +1,8 @@
 ---
-import '../styles/global.css';
-const pageTitle = "IDLES";
+import BaseLayout from "../layouts/BaseLayout.astro"
+const pageTitle = "IDLES"
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="https://www.idlesband.com/wp-content/uploads/sites/3/2023/10/cropped-idles-favicon-2023-32x32.png"
-    />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{pageTitle}</title>
-  </head>
-  <body>
-    <a href="/">Inicio</a>
-    <a href="/about/">Sobre mi</a>
-	<a href="/blog/">Blog</a>
-    <h1>{pageTitle}</h1>
-    <h1>Tienda de Idles</h1>
-  </body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+  <h2>QUE WEAAAA PASA BASTARDOS QLOS!!!</h2>
+</BaseLayout>
